# launchpad-technical-test

./: .gitignore  README.md
backend/search-api/: Cargo.toml
backend/search-api/src/: colors.rs  main.rs  ord.rs  reddit.rs
backend/search-api/src/actors/: dominant_color_cache.rs
challenge1/backend/search-api/src/: loggable.rs  reddit.rs
challenge1/backend/search-api/src/actors/: dominant_color.rs  mod.rs
challenge1/frontend/: build.sh  package-lock.json  package.json  snowpack.config.json
challenge1/frontend/wwwroot/: index.html  index.jsx  useInput.js
challenge2/frontend/: a.txt  package-lock.json  package.json  snowpack.config.json
challenge2/frontend/wwwroot/: globals.js  greatCircle.js  icons.js  index.html  index.jsx  mapUtils.js  useInput.js  utils.js
challenge2/frontend/wwwroot/Widgets/: DistanceWidget.jsx  LevelWidget.jsx  WindRose.jsx
challenge2/frontend/wwwroot/fakeData/: directions.json
frontend/: a.txt  package-lock.json  package.json  snowpack.config.json
frontend/wwwroot/: index.html  index.jsx  useAsync.js
kubernetes/: apply  dashboardsecret  elasticsearch.Deployment.yml  fluentd.DaemonSet.yml  fluentd.rbac.yml  forwardports
