[package]
name = "search-api"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.114"
rocket_contrib = "0.4.5"
isahc = { version ="0.9.5", features=["json"]}
