[package]
name = "search-api"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.114"
futures-io = "0.3"
futures = "0.3.5"
thiserror = "1.0"

tokio = { version = "0.2", features = ["fs", "stream", "sync", "time", "macros"] }
warp = "0.2.3"

isahc = { version = "0.9.5", features=["json"]}
palette = "0.5.0"
kmeans_colors = "0.3.3"

async-channel = "1.1.1"
oneshot = { version = "0.1.1", features=["async"]}

image = "0.23.6"

md5 = "0.7.0"

